<?xml version="1.0"?>
<package format="3">
  <name>crater_msgs</name>
  <version>0.0.1</version>
  <description>Message definitions for crater detections</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- indicate this package is an interface package that generates rosidl interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- for rosidl generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- dependencies used inside msgs -->
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
  </export>
</package>
